<resources>
    <string name="app_name">Airbender</string>
    <string name="btn_login">Login</string>
    <string name="txt_password">Password</string>
    <string name="txt_username">Username</string>
    <string name="btn_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_save">Save</string>
    <string name="txt_ipaddress">IP Address</string>
    <string name="txt_local_server">Local Server</string>
    <string name="txt_remote_server">Remote Server</string>
    <string name="txt_default_local_ip">10.0.2.2</string>
    <string name="txt_balance_requests">Balance Requests</string>
    <string name="dialog_select_amount">Insert an amount!</string>
    <string name="txt_create">Create</string>
    <string name="txt_cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="buy_a_ticket">Buy a ticket</string>
    <string name="txt_completed">Completed</string>
    <string name="txt_toComplete">To complete</string>
    <string name="txt_tickets">Your tickets</string>
    <string name="txt_check_in">Check-in</string>
    <string name="passager_information">Passager Information</string>
    <string name="flight_information">Flight Information</string>
    <string name="ticket_information">Ticket Information</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_logged_in_as">Logged in as</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="nif">NIF</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="balance">Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="txt_fname">First Name</string>
    <string name="txt_surname">Surname</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_nif">NIF</string>
    <string name="airport_departure">Airport departure</string>
    <string name="airport_arrival">Airport arrival</string>
    <string name="date">Departure Date</string>
    <string name="txt_search">Search</string>
    <string name="txt_select">Select</string>
    <string name="search_a_flight">Search for a flight</string>
    <string name="user_information">User Information</string>
    <string name="prices">Prices</string>
    <string name="economicPrice">Economic Price</string>
    <string name="normalPrice">Normal Price</string>
    <string name="luxuryPrice">Luxury Price</string>
    <string name="txt_pay">Pay</string>
</resources>